--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
             const prediction = await model.predict(tensor);
             const output = prediction.dataSync();
 
+            console.log(output);
+
             // Display the prediction result
             result.innerHTML = `<div>
                             <h1>Proba Bretagne: ${output[0] * 100} %</h1>
-                            <h1>Proba non Bretagne: ${output[1] * 100} %</h1>
+                            <h1>Proba non Bretagne: ${
+                              (output[1] + output[2]) * 100
+                            } %</h1>
                         </div>`;
           };
           img.src = URL.createObjectURL(file);
