--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         try {
           // Load the model
-          const model = await tf.loadGraphModel("brittany_model/model.json");
+          const model = await tf.loadGraphModel("model/model.json");
 
           // Create an HTMLImageElement from the file
           const img = new Image();
