--- a/index.html
+++ b/index.html
@@ -37,6 +37,53 @@
 
         try {
           // Load the model
+          const model = await tf.loadLayersModel("model/model.json");
+
+          // Create an HTMLImageElement from the file
+          const img = new Image();
+          img.onload = async () => {
+            // Convert the image to a tensor
+            const tensor = tf.browser
+              .fromPixels(img)
+              .resizeBilinear([128, 128])
+              .expandDims();
+
+            // Make a prediction
+            const prediction = await model.predict(tensor);
+            const output = prediction.dataSync();
+
+            // Display the prediction result
+            result.innerHTML = `<div>
+                            <h1>Proba Bretagne: ${output[0] * 100} %</h1>
+                            <h1>Proba non Bretagne: ${
+                              100 - output[0] * 100
+                            } %</h1>
+                        </div>`;
+          };
+          img.src = URL.createObjectURL(file);
+        } catch (err) {
+          console.error(err);
+          result.innerHTML = `<div><h1>Oups error: ${err}</h1></div>`;
+        }
+      }
+    </script>
+    <!-- <script>
+      document
+        .getElementById("image-input")
+        .addEventListener("change", classifyImage);
+
+      async function classifyImage(e) {
+        const file = e.target.files[0];
+        const result = document.getElementById("result");
+        const imageView = document.getElementById("image-view");
+
+        if (!file) return;
+
+        imageView.src = URL.createObjectURL(file);
+        result.innerHTML = `<div><h1>Loading</h1></div>`;
+
+        try {
+          // Load the model
           const model = await tf.loadGraphModel("model/model.json");
 
           // Create an HTMLImageElement from the file
@@ -67,6 +114,6 @@
           result.innerHTML = `<div><h1>Oups error: ${err}</h1></div>`;
         }
       }
-    </script>
+    </script> -->
   </body>
 </html>
